<resources>
    <string name="app_name">My Application</string>
    <string name="error_no_data_available">No data was found</string>
    <string name="error_no_internet_available">No Internet connection, please verify connectivity</string>
    <string name="enter_character_name">Enter character name</string>
    <string name="search">Search</string>
    <string name="name">Name:</string>
    <string name="id">ID:</string>
    <string name="comics">Comics:</string>
    <string name="example">Example</string>
    <string name="description">Description: %s</string>
    <string name="character_not_found">Character not found</string>
    <string name="no_description_was_found">No description was found</string>

</resources>